--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
-html, body{
-    height:100%;
+html, body {
+    height: 100%;
 }
-img{
+
+img {
     max-width: 100%;
 }
+
 .sub-nav {
     position: fixed;
     right: 0;
@@ -17,57 +19,63 @@ img{
     -moz-box-shadow: 3px 0 2px rgba(0, 0, 0, 0.5);
     box-shadow: 3px 0 2px rgba(0, 0, 0, 0.5);
 }
-.ul-large{
+
+.ul-large {
     margin: 0;
     padding: 0;
     float: right;
     margin-right: 20px;
 }
-.ul-large li{
+
+.ul-large li {
     list-style: none;
     cursor: pointer;
     margin: 0;
     display: inline-block;
     padding: 20px 15px;
 }
-.ul-large li a{
+
+.ul-large li a {
     color: #4dbb6d;
     padding: 20px 15px;
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
 }
-.ul-large li a:hover{
+
+.ul-large li a:hover {
     text-decoration: none;
 }
-.ul-large li:hover{
+
+.menu-active, .ul-large li:hover {
     background-color: #eee;
-    border-bottom: 5px solid #4dbb6d;
+    border-bottom: 3px solid #4dbb6d;
 }
-.menu-active{
-    background-color: #eee;
-    border-bottom: 5px solid #4dbb6d;
-}
-.banner{
+
+.banner {
     padding: 0;
     margin-top: 65px;
 }
-.header{
+
+.header {
     width: 100%;
     z-index: 10;
     border-bottom: 1px solid rgba(255, 255, 255, 0.12);
     display: inline-block;
 }
+
 .logo {
     display: inline-block;
     float: left;
     margin-top: 3px;
     margin-left: 10%;
 }
-.logo img{
+
+.logo img {
     height: 80px;
 }
-.header ul{
+
+.header ul {
     display: inline-block;
     float: right;
     /*margin-right: 30px;*/
@@ -75,7 +83,8 @@ img{
     margin: 0;
     padding: 0;
 }
-.header li{
+
+.header li {
     list-style: none;
     display: inline-block;
     padding: 20px;
@@ -84,19 +93,23 @@ img{
     font-size: 18px;
     text-transform: uppercase;
 }
-.header li:hover{
+
+.header li:hover {
     color: #4dbb6d;
 }
-.header a{
+
+.header a {
     color: #fff;
     font-size: 16px;
     transition: ease all 300ms;
     text-decoration: none;
     text-transform: uppercase;
 }
-.header a:hover{
+
+.header a:hover {
     color: #4dbb6d;
 }
+
 .header-sm {
     position: fixed;
     top: 20px;
@@ -108,13 +121,15 @@ img{
     font-size: 16px;
     line-height: 32px;
     padding: 20px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
-.slogan .owl-dots{
+
+.slogan .owl-dots {
     text-align: center;
     width: 100%;
     margin-top: 20px;
 }
+
 .icon-menu-sm {
     background-color: #4dbb6d;
     color: #fff;
@@ -122,10 +137,12 @@ img{
     font-size: 30px;
     border-radius: 50%;
 }
-.content{
-    height:100%;
+
+.content {
+    height: 100%;
 }
-.first-section{
+
+.first-section {
     /*height: 100%;*/
     margin-top: 65px;
     min-height: 100%;
@@ -134,27 +151,32 @@ img{
     background-size: cover;
     padding: 0;
 }
-.slogan{
+
+.slogan {
     margin-top: 100px;
     /*margin-left: 60px;*/
     /*position: absolute;*/
     color: #fff;
 }
-.left{
+
+.left {
     /*width: 50%;*/
     /*display: inline-block;*/
     margin-top: 20px;
 }
+
 .left span {
     color: #fff;
     display: block;
     font-size: 18px;
 }
+
 .right {
     width: 40%;
     display: inline-block;
     margin-left: 70px;
 }
+
 .first-intro {
     margin-top: 60px;
     padding-top: 40px;
@@ -164,6 +186,7 @@ img{
     display: inline-block;
     width: 100%;
 }
+
 .item-contact {
     /*display: inline-block;*/
     /*width: 45%;*/
@@ -171,21 +194,26 @@ img{
     padding-left: 10px;
     margin-top: 20px;
 }
+
 .title-contact {
     color: #4dbb6d;
     font-size: 16px;
 }
+
 .content-contact {
     color: #fff;
     font-size: 16px;
 }
-section{
+
+section {
     padding: 30px 0px;
 }
-.intro, .product, .service{
+
+.intro, .product, .service {
     background-color: #e9f0f5;
 }
-.title-section{
+
+.title-section {
     color: #2e353e;
     font-size: 32px;
     font-weight: 700;
@@ -196,13 +224,14 @@ section{
     border-bottom: 2px solid #4dbb6d;
 
 }
+
 /*.title-section::before{*/
-    /*border-top: 4px double #ccc;*/
-    /*content: "";*/
-    /*width: 100%;*/
-    /*position: absolute;*/
-    /*top: 50%;*/
-    /*left: 0;*/
+/*border-top: 4px double #ccc;*/
+/*content: "";*/
+/*width: 100%;*/
+/*position: absolute;*/
+/*top: 50%;*/
+/*left: 0;*/
 /*}*/
 .title-section h2 {
     color: #2e353e;
@@ -213,9 +242,11 @@ section{
     /*background-color: #fff;*/
     padding: 0px 10px;
 }
-.style{
+
+.style {
     background-color: #fff;
 }
+
 .icon-style {
     font-size: 40px;
     height: 80px;
@@ -230,20 +261,24 @@ section{
     border-radius: 50%;
 
 }
+
 .title-item-style {
     font-size: 20px;
     font-weight: bold;
 }
+
 .item-style {
     text-align: center;
 }
+
 .content-item-style {
     font-size: 16px;
     margin-top: 15px;
     text-align: left;
     line-height: 30px;
 }
-.icon-count{
+
+.icon-count {
     font-size: 28px;
     vertical-align: middle;
     display: inline-block;
@@ -255,21 +290,25 @@ section{
     color: #fff;
     border-radius: 5px;
 }
-.number-count{
+
+.number-count {
     font-size: 50px;
     color: #4dbb6d;
     display: inline-block;
     vertical-align: middle;
 }
+
 .counter {
     display: inline-block;
     vertical-align: middle;
     margin-left: 10px;
 }
+
 .des-count {
     display: block;
     font-size: 18px;
 }
+
 .item-count {
     margin-top: 30px;
 }
@@ -291,7 +330,7 @@ section{
     height: 15px;
     width: 15px;
     display: inline-block;
-    background: rgba(127,127,127, 0.5);
+    background: rgba(127, 127, 127, 0.5);
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -299,49 +338,58 @@ section{
 .owl-dot.active {
     background: #4dbb6d;
 }
+
 .title-slide {
     color: #4dbb6d;
     font-size: 26px;
     font-weight: bold;
 }
-blockquote{
+
+blockquote {
     border-left: 5px solid #4dbb6d;
     background-color: #fff;
 }
-.owl-carousel{
+
+.owl-carousel {
     margin-top: 20px;
 }
-.product img{
+
+.product img {
     height: 150px;
 }
+
 .item-product {
     margin-top: 30px;
     text-align: center;
 }
+
 .item-product-name {
     margin-top: 10px;
     font-size: 18px;
     color: #000;
 }
-.item-product:hover .item-product-hover{
+
+.item-product:hover .item-product-hover {
     display: block;
 }
+
 .item-product-hover {
     position: absolute;
     height: 150px;
     width: calc(100% - 30px);
     top: 0px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     line-height: 200px;
     cursor: pointer;
     display: none;
 }
+
 .item-plus {
     font-size: 60px;
     color: #fff;
 }
 
-.modal-content{
+.modal-content {
     /*padding: 100px 0;*/
     /*min-height: 100%;*/
     /*border: 0;*/
@@ -352,15 +400,18 @@ blockquote{
     /*box-shadow: none;*/
     /*background-color: #e9f0f5;*/
 }
-.close-modal{
+
+.close-modal {
     position: absolute;
     top: 25px;
     right: 25px;
     cursor: pointer;
 }
+
 .modal-title-recruit {
     font-size: 18px;
 }
+
 .nav-modal {
     display: inline-block;
     padding: 20px;
@@ -369,57 +420,71 @@ blockquote{
     margin-top: 20px;
     cursor: pointer;
 }
-.nav-modal-active{
+
+.nav-modal-active {
     border-bottom: 2px solid #4dbb6d;
     color: #4dbb6d;
 }
-.modal blockquote{
+
+.modal blockquote {
     margin-top: 50px;
     text-align: left;
 }
-.blockquote-reverse{
+
+.blockquote-reverse {
     text-align: right !important;
     border-right: 5px solid #4dbb6d;
 }
-blockquote span{
+
+blockquote span {
     font-size: 20px;
     color: #000;
     font-weight: bold;
 }
-#website-process{
+
+#website-process {
     display: none;
 }
+
 .close-footer {
     margin-top: 50px;
 }
-.content-p{
+
+.content-p {
     text-align: left;
     font-size: 20px;
     margin-top: 40px;
 }
-.modal-nds{
+
+.modal-nds {
     background-color: #fff;
 }
+
 .game-name {
     margin-top: 10px;
     display: block;
     font-size: 16px;
 }
+
 .download-game {
     font-size: 30px;
     margin: 10px;
     cursor: pointer;
 }
-.wrap-content-modal{
+
+.wrap-content-modal {
     margin-top: 50px;
 }
-#modal-mobile, #modal-nds, .modal{
+
+#modal-mobile, #modal-nds, .modal {
     padding-right: 0px !important;
 }
-.icons{
+
+.icons {
     text-align: center;
     margin-top: 20px;
 }
+
 .icons i {
     font-size: 40px;
     height: 80px;
@@ -431,9 +496,11 @@ blockquote span{
     text-align: center;
     border-radius: 50%;
 }
+
 .wrapper-recruitment {
     margin-top: 30px;
 }
+
 .title-recruitment {
     font-size: 20px;
     color: #000;
@@ -442,52 +509,64 @@ blockquote span{
     padding-bottom: 10px;
     margin-top: 30px;
 }
-.recruitment a{
+
+.recruitment a {
     /*display: block;*/
     /*font-size: 16px;*/
     /*margin-top: 20px;*/
     /*color: #000;*/
     /*cursor: pointer;*/
 }
-.recruit-content{
+
+.recruit-content {
     text-align: left;
 }
-.wrapper-post{
+
+.wrapper-post {
     margin-top: 20px;
 }
-.contact-footer input{
+
+.contact-footer input {
     margin: 20px 0px;
 }
+
 .contact-footer {
     background: url(../images/about_background.jpg) no-repeat;
     background-size: cover;
     color: #ddd;
     font-size: 17px;
 }
+
 .title-section-footer {
     color: #fff;
 }
+
 .item-contact-footer {
     margin-top: 20px;
 }
-.pagination>li>a{
+
+.pagination > li > a {
     color: #4dbb6d !important;
 }
-.pagination>.active>a{
+
+.pagination > .active > a {
     background-color: #4dbb6d !important;
     color: #fff !important;
     border-color: #4dbb6d !important;
 }
+
 .item-news {
     margin-top: 20px;
     border-bottom: 1px dashed #CCC;
     padding-bottom: 10px;
 }
+
 .img-news {
     max-width: 300px;
     text-align: center;
     margin-bottom: 15px;
 }
+
 .title-news {
     font-size: 16px;
     color: #000;
@@ -496,6 +575,7 @@ blockquote span{
     min-width: 200px;
     margin-left: 15px;
 }
+
 .content-news {
     display: -webkit-box;
     font-size: 14px;
@@ -506,46 +586,54 @@ blockquote span{
 .btnRecruit {
     margin: 0px 6px;
 }
+
 .item-recruit {
     position: relative;
     border-bottom: 1px dashed #ccc;
     margin-bottom: 20px;
     padding: 5px;
 }
+
 .title-item-recruit {
     font-size: 16px;
     margin-top: 6px;
     font-weight: bold;
 }
-.item-recruit:hover .item-recruit-hover{
+
+.item-recruit:hover .item-recruit-hover {
     display: block;
 }
+
 .item-recruit-hover {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 10;
     display: none;
     /*text-align: center;*/
 }
+
 .group-btn-recruit {
     position: absolute;
     top: calc(50% - 15px);
     text-align: center;
     width: 100%;
 }
+
 .recruit-menu {
     margin: 0;
     padding: 0;
 }
-.recruit-menu li{
+
+.recruit-menu li {
     list-style: none;
     margin: 10px 0;
     padding: 0;
 }
+
 .title-recruit {
     font-size: 18px;
     font-weight: bold;
@@ -555,14 +643,17 @@ blockquote span{
     padding-bottom: 6px;
     margin-bottom: 20px;
 }
-.recruit-menu a{
+
+.recruit-menu a {
     margin-top: 6px;
 }
+
 span.item-date {
     color: #333;
     font-size: 12px;
 }
-.error{
+
+.error {
     color: red;
     font-weight: normal;
     padding-top: 6px;
@@ -618,13 +709,13 @@ span.item-date {
     display: none;
 }
 
-.ul-sm li{
+.ul-sm li {
     list-style: none;
     margin: 0;
     line-height: 30px;
     padding-left: 20px;
 }
 
-.ul-sm a{
+.ul-sm a {
     font-size: 15px;
 }
