--- a/public/css/site/style.css
+++ b/public/css/site/style.css
@@ -532,7 +532,7 @@ blockquote span {
 }
 
 .contact-footer {
-    background: url(../images/about_background.jpg) no-repeat;
+    background: url(../../images/about_background.jpg) no-repeat;
     background-size: cover;
     color: #ddd;
     font-size: 17px;
